# code-feedback

./: .eslintrc.json  .gitignore  README.md  bump-version.mjs  eslint.config.mjs  mcp-config.json  package.json  pnpm-lock.yaml  setup.mjs  test-mcp.mjs  test-minimal.ts.bak  test-multilang.mjs  test-protocol.mjs  test-simple.mjs  test.mjs  tsconfig.json
examples/: Cargo.toml  Example.csproj  Example.java  Makefile  Program.cs  build.gradle  example-good.js  example-with-errors.js  example.go  example.py  example.rs  example.ts  pom.xml
src/: index.ts
src/config/: allowedPaths.ts  index.ts
src/legacy/: legacy_index.ts
src/prompts/: index.ts
src/resources/: index.ts
src/tools/: curl.ts  docker.ts  editor.ts  editor_filesystem.ts  filesystem.ts  find.ts  git.ts  go.ts  http.ts  index.ts  javascript.ts  lint.ts  make.ts  npm.ts  python.ts  typescript.ts  uv.ts
src/utils/: command.ts
tests/: client.test.ts  client.ts  go.test.ts  javascript.test.ts  lint.test.ts  list_npm_scripts.test.ts  make.test.ts  npm.test.ts  python.test.ts  typescript.test.ts
