[package]
name = "mcp-example"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Example Rust project for MCP testing"
license = "MIT"
repository = "https://github.com/yourusername/mcp-example"
homepage = "https://github.com/yourusername/mcp-example"
documentation = "https://docs.rs/mcp-example"
readme = "README.md"
keywords = ["mcp", "example", "rust"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"

[build-dependencies]
cc = "1.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[lib]
name = "mcp_example"
path = "src/lib.rs"

# Cargo features
[features]
default = ["full"]
full = ["serde", "tokio"]
minimal = []

# Profile configurations
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

# Workspace configuration (if this were part of a workspace)
[workspace]
members = [
    ".",
]

# Custom commands through cargo aliases
[alias]
xtask = "run --package xtask --"
lint = "clippy -- -D warnings"
fmt-check = "fmt -- --check"
test-all = "test --all-features"
